--- a/libs/forms/src/lib/components/form-fields/date/date.component.scss
+++ b/libs/forms/src/lib/components/form-fields/date/date.component.scss
@@ -1,6 +1,11 @@
-
-.input-date{
-    p-calendar, .p-calendar, input{
-        width:100%;
-    }
+.input-date {
+  .p-datepicker-trigger {
+    width: 40px;
+    text-align: center;
+  }
+  p-calendar,
+  .p-calendar,
+  input {
+    width: 100%;
+  }
 }
