--- a/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
@@ -226,7 +226,7 @@
               <p-accordion [activeIndex]="0">
                 <p-accordionTab header="Term Life">
                   <lib-form-generator
-                    [formModel]="loanProductsModel"
+                    [formModel]="nonCreditProducts"
                     [formGroup]="loanProductsForm"
                     [options]="formOptions"
                     [disableSubmit]="false"
@@ -235,7 +235,7 @@
                 </p-accordionTab>
                 <p-accordionTab header="Auto / Home & Auto">
                   <lib-form-generator
-                    [formModel]="loanProductsModel"
+                    [formModel]="nonCreditProducts"
                     [formGroup]="loanProductsForm"
                     [options]="formOptions"
                     [disableSubmit]="false"
@@ -244,7 +244,7 @@
                 </p-accordionTab>
                 <p-accordionTab header="Silver Safeguard Plan">
                   <lib-form-generator
-                    [formModel]="loanProductsModel"
+                    [formModel]="nonCreditProducts"
                     [formGroup]="loanProductsForm"
                     [options]="formOptions"
                     [disableSubmit]="false"
