Update socket service to use localStorage instead

--- a/apps/customer/src/app/routes/quote/quote.component.html
+++ b/apps/customer/src/app/routes/quote/quote.component.html
@@ -170,6 +170,23 @@
         View Loan Products
       </button>
       -->
+
+      <!--
+      <div class="d-flex" style="justify-content: space-between">
+        <button pButton class="me-1" (click)="prev()" [disabled]="index === 0">
+          Previous Offer
+        </button>
+        <button
+          pButton
+          class="ms-1"
+          (click)="next()"
+          [disabled]="index > 4"
+          style="margin-right: 0.5rem"
+        >
+          Next Offer
+        </button>
+      </div>
+-->
     </div>
   </p-card>
 </div>
