--- a/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-product-builder.component.html
@@ -101,7 +101,9 @@
         <app-loan-products-grid
           [loanProducts]="loanProducts"
           (statusChanged)="handleStatusChange($event)"
+          (deleteProduct)="deleteProduct($event)"
         ></app-loan-products-grid>
+
         <!--
         <div class="loan-products-footer">
           <div class="d-flex">
