--- a/apps/team-member/src/app/components/loan-product-builder/loan-products-grid/loan-products-grid.component.html
+++ b/apps/team-member/src/app/components/loan-product-builder/loan-products-grid/loan-products-grid.component.html
@@ -153,7 +153,7 @@
             <p-splitButton
               label="Info"
               appendTo="body"
-              [model]="items(index)"
+              [model]="items3[index]"
               (onClick)="op.toggle($event)"
             ></p-splitButton>
             <p-overlayPanel #op>
