--- a/apps/customer/src/app/routes/quote/quote.component.html
+++ b/apps/customer/src/app/routes/quote/quote.component.html
@@ -3,6 +3,7 @@
   <p-card>
     <div style="max-width: 480px; margin: auto">
       <h1>Welcome Back</h1>
+
       <p-tabView>
         <p-tabPanel>
           <ng-template pTemplate="header">
@@ -10,6 +11,13 @@
             Offer
           </ng-template>
 
+          <div class="mb-3">
+            <span
+              class="circle green"
+              style="position: relative; top: 3px; margin-left: 2px"
+            ></span>
+            Team Member Is Online
+          </div>
           <div class="loan-product p-3" *ngIf="product$ | async as product">
             <div class="row">
               <div class="col col-6">
@@ -145,6 +153,13 @@
           <ng-template pTemplate="header">
             <lib-icons icon="cog" class="me-2"></lib-icons>Loan Options
           </ng-template>
+          <div class="mb-3">
+            <span
+              class="circle green"
+              style="position: relative; top: 3px; margin-left: 2px"
+            ></span>
+            Team Member Is Online
+          </div>
           <lib-quote-form
             [ranges]="ranges$ | async"
             [formDefaults]="quoteFormDefaults$ | async"
