Wire up masterpage

--- a/apps/loan/loan-products/src/app/loan-products.component.html
+++ b/apps/loan/loan-products/src/app/loan-products.component.html
@@ -1,1 +1,10 @@
-<lib-masterpage> </lib-masterpage>
+<div id="loan-products">
+  <lib-masterpage [fullWidth]="true">
+    <div class="lp-layout">
+      <div class="left-col"></div>
+      <div class="main-col">
+        <router-outlet></router-outlet>
+      </div>
+    </div>
+  </lib-masterpage>
+</div>
