--- a/libs/masterpage/src/lib/masterpage/header/header.component.html
+++ b/libs/masterpage/src/lib/masterpage/header/header.component.html
@@ -3,7 +3,7 @@
     <nav class="nav">
       <span class="brand">
         <a class="brand pl-2" [routerLink]="['/']"
-          ><img src="assets/one-main-logo.svg" style="max-width: 200px"
+          ><img src="assets/one-main-logo-white.svg" style="max-width: 200px"
         /></a>
       </span>
 
