--- a/libs/masterpage/src/lib/masterpage/nav/nav.component.scss
+++ b/libs/masterpage/src/lib/masterpage/nav/nav.component.scss
@@ -78,13 +78,12 @@
 }
 
 .nav-menu-link {
-  color: #1d1d1d;
+  color: #fff;
   padding: 10px;
   text-decoration: none;
   font-size: 14px;
   font-weight: 800;
   text-transform: uppercase;
-  color: #1d1d1d;
   border-radius: 3px;
   -webkit-user-select: none;
   user-select: none;
