--- a/libs/brand/src/styles/omf/custom/_typography.scss
+++ b/libs/brand/src/styles/omf/custom/_typography.scss
@@ -5,16 +5,18 @@ body {
 }
 
 h1 {
-  font-size: 2.25em;
-  line-height: 1.2em;
-  font-weight: 500;
+  font-size: 24px;
+  line-height: 24px;
+  font-weight: 400;
   margin-bottom: 15px;
 }
 h2 {
-  font-weight: 800;
-  font-size: 1.125em;
-  line-height: 1.3em;
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: 400;
+  margin-bottom: 15px;
 }
+/*
 @media (min-width: 992px) {
   h1 {
     font-size: 3em;
@@ -23,3 +25,4 @@ h2 {
     font-size: 1.3125em;
   }
 }
+*/
