--- a/libs/brand/src/styles/styles.scss
+++ b/libs/brand/src/styles/styles.scss
@@ -23,3 +23,4 @@
 @import 'omf/custom/layout.scss';
 @import 'omf/custom/table.scss';
 @import 'omf/custom/buttons.scss';
+@import 'omf/custom/cards.scss';
