--- a/apps/loan/loan-products/src/app/loan-products.component.html
+++ b/apps/loan/loan-products/src/app/loan-products.component.html
@@ -7,6 +7,10 @@
         <div class="row">
           <div class="col col-12 col-md-8">
             <p-card styleClass="p-2">
+              <h1>
+                <lib-icons icon="money-check-alt"></lib-icons>
+                Loan Products
+              </h1>
               <app-loan-products-grid
                 [loanProducts]="lpSvc.loanProducts$ | async"
                 (modalOpen)="modalOpen($event)"
