--- a/libs/brand/src/styles/styles.scss
+++ b/libs/brand/src/styles/styles.scss
@@ -24,3 +24,4 @@
 @import 'omf/custom/table.scss';
 @import 'omf/custom/buttons.scss';
 @import 'omf/custom/cards.scss';
+@import 'omf/custom/menus.scss';
