--- a/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
+++ b/apps/loan/loan-products/src/app/components/loan-products-grid/loan-products-grid.component.html
@@ -1,12 +1,13 @@
-<p-table
-  dataKey="id"
-  [value]="loanProducts ?? []"
-  [tableStyle]="{ 'min-width': '50rem' }"
-  [expandedRowKeys]="expandedRows"
-  (onRowExpand)="onRowExpand($event)"
-  (onRowCollapse)="onRowCollapse($event)"
->
-  <!--
+<div id="loan-products-grid">
+  <p-table
+    dataKey="id"
+    [value]="loanProducts ?? []"
+    [tableStyle]="{ 'min-width': '50rem' }"
+    [expandedRowKeys]="expandedRows"
+    (onRowExpand)="onRowExpand($event)"
+    (onRowCollapse)="onRowCollapse($event)"
+  >
+    <!--
   <ng-template pTemplate="caption">
     <div class="flex align-items-center justify-content-between">
       <h2 class="mb-0">
@@ -16,122 +17,120 @@
     </div>
   </ng-template>
 -->
-  <ng-template pTemplate="header">
-    <tr>
-      @for (column of columns; track $index) {
-      <th [pSortableColumn]="column.prop">
-        <span [innerHTML]="column.label" class="me-2"></span>
-        <!--
-        <p-sortIcon
-          [field]="column.prop"
-          styleClass="ms-2"
-          *ngIf="!!column.prop"
-        />
-        -->
-      </th>
-      }
-    </tr>
-  </ng-template>
-  <ng-template
-    pTemplate="body"
-    pTemplate="body"
-    let-product
-    let-expanded="expanded"
-  >
-    <tr>
-      @for (column of columns; track $index) {}
-      <td>
-        <p-button
-          type="button"
-          pRipple
-          [pRowToggler]="product"
-          [text]="true"
-          [rounded]="true"
-          [plain]="true"
-          [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"
-        />
-      </td>
-      <td>Secure</td>
-      <td>{{ product.vehicles }}</td>
-      <td>{{ product.cashOut | currency : 'USD' : 'symbol' : '1.0-2' }}</td>
-      <td>{{ product.loanAmount | currency : 'USD' : 'symbol' : '1.0-2' }}</td>
-      <td>
-        {{ product.monthlyPayment | currency : 'USD' : 'symbol' : '1.0-2' }}
-      </td>
-      <td>
-        {{ product.paymentImpact | currency : 'USD' : 'symbol' : '1.0-2' }}
-      </td>
-      <td>{{ product.apr }}%</td>
-      <td>{{ product.ndi | currency : 'USD' : 'symbol' : '1.0-2' }}</td>
-      <td>Status</td>
-      <td>
-        <p-splitButton
-          styleClass="w-100"
-          label="Info"
-          appendTo="body"
-          [model]="actions"
-          (onClick)="op.toggle($event)"
-        ></p-splitButton>
-        <p-overlayPanel #op>
-          <div class="p-2">
-            <table class="table table-sm table-striped mb-0">
-              <tbody>
-                <tr>
-                  <td><strong>System Decision</strong></td>
-                  <td>$18,500</td>
-                </tr>
-                <tr>
-                  <td><strong>PTI</strong></td>
-                  <td>36%</td>
-                </tr>
-                <tr>
-                  <td><strong>LTV</strong></td>
-                  <td>120</td>
-                </tr>
-              </tbody>
-            </table>
-          </div>
-        </p-overlayPanel>
-      </td>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="rowexpansion" let-product>
-    <tr>
-      <td [attr.colspan]="columns.length + 1">
-        <div class="p-3">
-          <app-sub-products-grid
-            [products]="product.subProducts"
-            [colLength]="columns.length + 1"
-          ></app-sub-products-grid>
+    <ng-template pTemplate="header">
+      <tr>
+        <th
+          *ngFor="let column of columns; let i = index; track: $index"
+          [pSortableColumn]="column.prop"
+          [ngClass]="{ 'text-end': i === columns.length - 1 }"
+        >
+          <span [innerHTML]="column.label" class="me-2"></span>
+        </th>
+      </tr>
+    </ng-template>
+    <ng-template
+      pTemplate="body"
+      pTemplate="body"
+      let-product
+      let-expanded="expanded"
+      let-rowIndex="rowIndex"
+    >
+      <tr>
+        <td>
+          <p-button
+            type="button"
+            pRipple
+            [pRowToggler]="product"
+            [text]="true"
+            [rounded]="true"
+            [plain]="true"
+            [icon]="expanded ? 'pi pi-chevron-down' : 'pi pi-chevron-right'"
+          />
+        </td>
+        <td>Secure</td>
+        <td>{{ product.vehicles }}</td>
+        <td>{{ product.cashOut | currency : 'USD' : 'symbol' : '1.0-2' }}</td>
+        <td>
+          {{ product.loanAmount | currency : 'USD' : 'symbol' : '1.0-2' }}
+        </td>
+        <td>
+          {{ product.monthlyPayment | currency : 'USD' : 'symbol' : '1.0-2' }}
+        </td>
+        <td>
+          {{ product.paymentImpact | currency : 'USD' : 'symbol' : '1.0-2' }}
+        </td>
+        <td>{{ product.apr }}%</td>
+        <td>{{ product.ndi | currency : 'USD' : 'symbol' : '1.0-2' }}</td>
+        <td>Status</td>
+        <td class="text-end">
+          <p-splitButton
+            label="Info"
+            appendTo="body"
+            icon="pi pi-info-circle"
+            [model]="actions[rowIndex]"
+            (onClick)="op.toggle($event)"
+          ></p-splitButton>
+          <p-overlayPanel #op>
+            <div class="p-2">
+              <table class="table table-sm table-striped mb-0">
+                <tbody>
+                  <tr>
+                    <td><strong>System Decision</strong></td>
+                    <td>$18,500</td>
+                  </tr>
+                  <tr>
+                    <td><strong>PTI</strong></td>
+                    <td>36%</td>
+                  </tr>
+                  <tr>
+                    <td><strong>LTV</strong></td>
+                    <td>120</td>
+                  </tr>
+                </tbody>
+              </table>
+            </div>
+          </p-overlayPanel>
+        </td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="rowexpansion" let-product>
+      <tr>
+        <td [attr.colspan]="columns.length + 1">
+          <div class="p-3">
+            <app-sub-products-grid
+              [products]="product.subProducts"
+              [colLength]="columns.length + 1"
+            ></app-sub-products-grid>
 
-          <div class="text-end">
-            <p-button
-              class="me-2"
-              (click)="
-                modalOpen.emit({
-                  type: SubProductType.Credit,
-                  productId: product.id
-                })
-              "
-              >Add Credit Product</p-button
-            >
-            <p-button
-              (click)="
-                modalOpen.emit({
-                  type: SubProductType.Noncredit,
-                  productId: product.id
-                })
-              "
-              >Add Non-Credit Product</p-button
-            >
+            <div class="text-end">
+              <p-button
+                class="me-2"
+                (click)="
+                  modalOpen.emit({
+                    type: SubProductType.Credit,
+                    productId: product.id
+                  })
+                "
+                >Add Credit Product</p-button
+              >
+              <p-button
+                (click)="
+                  modalOpen.emit({
+                    type: SubProductType.Noncredit,
+                    productId: product.id
+                  })
+                "
+                >Add Non-Credit Product</p-button
+              >
+            </div>
           </div>
-        </div>
-      </td>
-    </tr>
-  </ng-template>
-  <ng-template pTemplate="emptymessage">
-    <tr>
-      <td [attr.colspan]="columns.length + 1">There are no loan products.</td>
-    </tr>
-  </ng-template>
-</p-table>
+        </td>
+      </tr>
+    </ng-template>
+    <ng-template pTemplate="emptymessage">
+      <tr>
+        <td [attr.colspan]="columns.length + 1">There are no loan products.</td>
+      </tr>
+    </ng-template>
+  </p-table>
+</div>
