--- a/libs/brand/src/styles/omf/custom/_table.scss
+++ b/libs/brand/src/styles/omf/custom/_table.scss
@@ -9,7 +9,7 @@
   }
   .p-datatable-thead > tr > th {
     text-align: left;
-    padding: 0.25rem 1rem;
+    padding: 0.25rem;
     border: 1px solid #e2e8f0;
     border-width: 0 0 1px 0;
     font-weight: 600;
