--- a/libs/brand/src/styles/styles.scss
+++ b/libs/brand/src/styles/styles.scss
@@ -25,3 +25,4 @@
 @import 'omf/custom/buttons.scss';
 @import 'omf/custom/cards.scss';
 @import 'omf/custom/menus.scss';
+@import 'omf/custom/tabs.scss';
