--- a/libs/brand/src/styles/omf/custom/_typography.scss
+++ b/libs/brand/src/styles/omf/custom/_typography.scss
@@ -11,11 +11,18 @@ h1 {
   margin-bottom: 15px;
 }
 h2 {
-  font-size: 16px;
+  font-size: 18px;
   line-height: 24px;
-  font-weight: 400;
+  font-weight: 500;
   margin-bottom: 15px;
 }
+h3 {
+  font-size: 14px;
+  line-height: 24px;
+  font-weight: 500;
+  margin-bottom: 15px;
+}
+
 /*
 @media (min-width: 992px) {
   h1 {
